# clf_object_recognition

./: .clang-tidy  .gitignore  README.md  links.md
clf_object_recognition/: CMakeLists.txt  package.xml
clf_object_recognition_3d/: CMakeLists.txt  README.md  package.xml  setup.py
clf_object_recognition_3d/config/: rosconsole.config  rviz.rviz
clf_object_recognition_3d/include/: Image2Pcl.h  detector.h  pcl_to_detection_provider.h  registrated_pcl_provider.h
clf_object_recognition_3d/include/clf_object_recognition_3d/: cloud_from_image.h  cloud_sampler.hpp  detector.h  img_2_raw_point_cloud_provider.h  load_cloud.hpp  load_point_cloud_provider.h  model_provider.h  registrated_pcl_provider.h
clf_object_recognition_3d/launch/: debug.launch  debug_detect.launch  debug_realsense.launch  detect.launch  launch_services.launch  simple_realsense.launch  simple_xtion.launch  test.launch
clf_object_recognition_3d/scripts/: detection_via_pcl  new_3d  pcl_registration  simple_3d
clf_object_recognition_3d/src/: Image2Pcl.cpp  cloud_from_image.cpp  detector.cpp  img_2_raw_point_cloud_provider.cpp  load_point_cloud_provider.cpp  model_provider.cpp  node.cpp  pcl_to_detection_provider.cpp  registrated_pcl_provider.cpp
clf_object_recognition_3d/src/clf_object_recognition_3d/: load_point_cloud_provider.cpp  pcl_to_detection_provider.cpp  registrated_pcl_provider.cpp  simple.py
clf_object_recognition_3d/src/cpp/: Image2Pcl.cpp  convert_mesh_to_pcl.cpp  img_2_raw_point_cloud_provider.cpp  load_point_cloud_provider.cpp  meshes_to_pcls.cpp  pcl_to_detection_provider.cpp  raw_pcl_provider.cpp  registrated_pcl_provider.cpp
clf_object_recognition_3d/src/python/: image_2_pcl.py
clf_object_recognition_cfg/: CMakeLists.txt  package.xml
clf_object_recognition_cfg/cfg/: Detect3d.cfg  Yolox.cfg
clf_object_recognition_config/: CMakeLists.txt  package.xml
clf_object_recognition_config/config/: kinect-color-vga.xml  kinect-depth-vga.xml  robotfilter.xml  segmentation_config.xml  ssd_default.config
clf_object_recognition_config/launch/: object_fitter.launch
clf_object_recognition_merger/: CMakeLists.txt  package.xml
clf_object_recognition_merger/include/clf_object_recognition_merger/: oobb_calculate.h
clf_object_recognition_merger/src/: object_merger.cpp
clf_object_recognition_msgs/: CMakeLists.txt  package.xml
clf_object_recognition_msgs/config/: hulls.yaml
clf_object_recognition_msgs/msg/: Hull.msg  HullArray.msg
clf_object_recognition_msgs/srv/: Classify2D.srv  Detect2D.srv  Detect2DImage.srv  Detect3D.srv  Img2RawPointCloudMsg.srv  Img2RawPointCloudProvider.srv  LoadPointCloudMsg.srv  PclToDetectionMsg.srv  PclToDetectionProvider.srv  RegistratedPclMsg.srv  img_2_raw_point_cloud_provider.srv  load_point_cloud_provider.srv  pcl_to_detection_provider.srv
clf_object_recognition_rviz/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
clf_object_recognition_rviz/include/clf_object_recognition_rviz/: bounding_box_array_display.h  bounding_box_visual.h  detection_3d_array_display.h  detection_3d_visual.h  hull_array_display.h  hull_visual.h  point_cloud_visual.h
clf_object_recognition_rviz/src/: bounding_box_array_display.cpp  bounding_box_visual.cpp  detection_3d_array_display.cpp  detection_3d_visual.cpp  hull_array_display.cpp  hull_visual.cpp  linker_test.cpp  point_cloud_visual.cpp
clf_object_recognition_rviz/test/: detection3Darray.yaml  detection3Darray2.yaml
clf_object_recognition_tensorflow/: CMakeLists.txt  README.md  package.xml  setup.py
clf_object_recognition_tensorflow/scripts/: export_graph  object_detection_node  object_recognition_node  retrain_inception  train_detector
clf_object_recognition_tensorflow/src/clf_object_recognition_tensorflow/: create_tf_record.py  detect.py  object.py  objectset_utils.py  recognize.py  retrain.py  tf_retrain.py  trainer.py  utils.py
clf_object_recognition_tools/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
clf_object_recognition_tools/scripts/: annotation_gui  evaluate_graphs  test_gui  train_gui
clf_object_recognition_tools/src/clf_object_recognition_tools/: annotater.py  annotation.py  boundingbox.py  data_augmentation.py  dialogs.py  evaluation.py  image_widget.py  image_writer.py  test.py  tf_utils.py  train.py  utils.py
clf_object_recognition_yolox/: CMakeLists.txt  README.md  package.xml  setup.py
clf_object_recognition_yolox/config/: coco_ecwm.yaml  config.yaml
clf_object_recognition_yolox/launch/: yolox-s.launch  yolox_l.launch  yolox_s.launch
clf_object_recognition_yolox/scripts/: yolox_recognition_node
clf_object_recognition_yolox/src/clf_object_recognition_yolox/: recognizer.py  util.py
crap/: Image2Pcl.cpp  Image2Pcl.h  err.txt  img_2_raw_point_cloud_provider.cpp  img_2_raw_point_cloud_provider.h  load_point_cloud_provider.cpp  load_point_cloud_provider.h  pcl_to_detection_provider.cpp  pcl_to_detection_provider.h  registrated_pcl_provider.h
crap/cpp/: OldImage2Pcl.cpp  SimpleDetector.h  convert_mesh_to_pcl.cpp  meshes_to_pcls.cpp
crap/python/: from_image.py  simple.py
git_hooks/pre-commit/: clang-format
scripts/: format.sh
