<?xml version="1.0"?>
<package format="2">
  <name>clf_object_recognition_3d</name>
  <version>0.0.0</version>
  <description>Clf object recognition nodes</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>clf_object_recognition_msgs</depend>
  <depend>clf_object_recognition_cfg</depend>
  <depend>vision_msgs</depend>
  <depend> pcl </depend>
  <depend> pcl_ros </depend>

</package>
