<?xml version="1.0"?>
<package format="2">
  <name>clf_object_recognition_config</name>
  <version>0.0.0</version>
  <description>Configs</description>
  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>
  <license>Apache 2.0</license>

  <author>Leroy Ruegemer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
