<?xml version="1.0"?>
<package>
  <name>clf_object_recognition_merger</name>
  <version>0.0.0</version>
  <description>Object recognition based on 2d and 3d hypotheses</description>

  <maintainer email="saschroeder@techfak.uni-bielefeld.de">Sarah Schröder</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>clf_object_recognition_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>vision_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>clf_object_recognition_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>

