<?xml version="1.0"?>
<package format="2">
  <name>clf_object_recognition_msgs</name>
  <version>0.0.0</version>
  <description>Test Messages</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>
  <author>Leroy Ruegemer</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>