<?xml version="1.0"?>
<package format="2">
  <name>clf_object_recognition_rviz</name>
  <version>0.0.3</version>
  <description>Rviz plugins for clf_object_recognition</description>
  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Ruegemer</maintainer>
  <license>Apache 2.0</license>

  <author>Leroy Ruegemer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>qtbase5-dev</depend>
  <depend>clf_object_recognition_msgs</depend>
  <depend>rviz</depend>
  <depend>eigen_conversions</depend>

  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>