<?xml version="1.0"?>
<package>
  <name>clf_object_recognition_tools</name>
  <version>0.0.0</version>
  <description>Clf object recognition tools</description>

  <maintainer email="saschroeder@techfak.uni-bielefeld.de">Sarah Schröder</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>