<?xml version="1.0"?>
<package format="2">>
  <name>clf_object_recognition_yolox</name>
  <version>0.0.0</version>
  <description>Object recognition with yolox</description>

  <maintainer email="lruegeme@techfak.uni-bielefeld.de">Leroy Rügemer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>vision_msgs</depend>
  <depend>python-numpy</depend>
  <depend>clf_object_recognition_cfg</depend>
  <depend>dynamic_reconfigure</depend>

</package>
